--- a/projetos.html
+++ b/projetos.html
@@ -17,8 +17,8 @@
     <nav class="navbar">
         <div class="navbar-links">
             <a href="index.html">Início</a>
-            <a href="indexProjetos.html">Projetos</a>
-            <a href="indexContato.html">Contato</a>
+            <a href="projetos.html">Projetos</a>
+            <a href="contato.html">Contato</a>
         </div>
     </nav>
 </div>
