--- a/projetos.html
+++ b/projetos.html
@@ -30,7 +30,7 @@
 </div>
 <div class="projeto-container">
     <div class="simulador-card">
-        <img src="img/imagem de calculando orçamento.jpg" alt="Simulador de Orçamento">
+        <img src="imagens/imagem de calculando orçamento.jpg" alt="Simulador de Orçamento">
         <div class="projeto-info">
             <h3>Simulador de Orçamento</h3>
             <p>Um simulador de orçamento que permite calcular o custo de um projeto de acordo com as especificações do usuário.</p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="kanban-card">
-        <img src="img/imagem de kanban.jpg" alt="Kanban">
+        <img src="imagens/imagem de kanban.jpg" alt="Kanban">
         <div class="projeto-info">
             <h3>Kanban</h3>
             <p>Um Kanban para organizar suas tarefas de forma eficiente e produtiva de acordo com sua agenda do seu <br>dia a dia</p>
