update page "Contato"

--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,9 @@
     <div class="contato">
         <h2>Entre em contato comigo!</h2>
         <p>Estou disponível para responder suas dúvidas, ouvir suas sugestões ou simplesmente bater um papo. Sinta-se à vontade para me contatar através dos seguintes meios:</p>
-        <ul>
-            <li><i class="fa-solid fa-envelope"><p>yanporfirio13@gmail.com</p></i></li>
+        <button class="email" onclick="window.open('mailto:yanporfirio13@gmail.com', '_blank')">
+            <i class="fa-solid fa-envelope"></i><p>Email</p>
+        </button>
+    </div>  
 </body>
 </html>
