--- a/index.html
+++ b/index.html
@@ -76,8 +76,21 @@
   </div>
 
   <footer>
-    <p>© 2025 Yan Porfírio - Todos os direitos reservados</p>
+    <p>© 2026 Yan Porfírio - Todos os direitos reservados</p>
   </footer>
+
+  <script>
+    // Efeito de scroll na navbar
+    const navbarContainer = document.querySelector('.navbar-container');
+    
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 50) {
+        navbarContainer.classList.add('scrolled');
+      } else {
+        navbarContainer.classList.remove('scrolled');
+      }
+    });
+  </script>
 
 </body>
 </html>
