--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="navbar-container">
+    <div class="navbar-container">
         <nav class="navbar">
             <div class="navbar-links">
                 <a href="index.html">Início</a>
@@ -33,6 +33,19 @@
         <button class="email" onclick="window.open('mailto:yanporfirio13@gmail.com', '_blank')">
             <i class="fa-solid fa-envelope"></i><p>Email</p>
         </button>
-    </div>  
+    </div>
+
+    <script>
+        // Efeito de scroll na navbar
+        const navbarContainer = document.querySelector('.navbar-container');
+        
+        window.addEventListener('scroll', function() {
+            if (window.scrollY > 50) {
+                navbarContainer.classList.add('scrolled');
+            } else {
+                navbarContainer.classList.remove('scrolled');
+            }
+        });
+    </script>
 </body>
 </html>
