--- a/contato.html
+++ b/contato.html
@@ -22,15 +22,15 @@
             </div>
         </nav>
     </div>
-    <div class="bloco">
+    <div class="bloco fade-in">
         <header>
-            <h1>Contato</h1>
+            <h1 class="slide-in-left">Contato</h1>
         </header>
     </div>
-    <div class="contato">
+    <div class="contato fade-in fade-in-delay-1">
         <h2>Entre em contato comigo!</h2>
         <p>Estou disponível para responder suas dúvidas, ouvir suas sugestões ou simplesmente bater um papo. Sinta-se à vontade para me contatar através dos seguintes meios:</p>
-        <button class="email" onclick="window.open('mailto:yanporfirio13@gmail.com', '_blank')">
+        <button class="email scale-in" onclick="window.open('mailto:yanporfirio13@gmail.com', '_blank')">
             <i class="fa-solid fa-envelope"></i><p>Email</p>
         </button>
     </div>
@@ -45,6 +45,35 @@
             } else {
                 navbarContainer.classList.remove('scrolled');
             }
+        });
+
+        // Animações de entrada ao fazer scroll
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver(function(entries) {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        }, observerOptions);
+
+        // Observar todos os elementos com classes de animação
+        document.querySelectorAll('.fade-in, .slide-in-left, .scale-in').forEach(el => {
+            observer.observe(el);
+        });
+
+        // Animação imediata para elementos acima da dobra
+        window.addEventListener('load', function() {
+            const firstElements = document.querySelectorAll('.bloco, .bloco header h1');
+            firstElements.forEach(el => {
+                if (el.getBoundingClientRect().top < window.innerHeight) {
+                    el.classList.add('visible');
+                }
+            });
         });
     </script>
 </body>
