Add curriculum button to index.html and style it in style.css

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <p>Sou um desenvolvedor Front-End, que está em busca<br> 
         de sua primeira vaga de emprego na área da programação web,<br>
         estou disposto a aprender para melhorar como dev.</p>
+      <button class="curriculo scale-in" onclick="window.open('https://drive.google.com/file/d/1-Wl-m6Xm9_6bQgF-KUM3_s3b24uD26Bk/view?usp=sharing', '_blank')">
+        <i class="fa-solid fa-curriculum"></i>
+        <p>Currículo</p>
+      </button>
     </section>
     
     <section class="redes-sociais fade-in">
