Remove profile.js file from the project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="sobre-mim fade-in">
       <h2>Sobre mim</h2>
-      <p>Sou um desenvolvedor Front-End, que está em busca<br> 
+      <p>Sou um desenvolvedor Web, que está em busca<br> 
         de sua primeira vaga de emprego na área da programação web,<br>
         estou disposto a aprender para melhorar como dev.</p>
     </section>
@@ -79,7 +79,7 @@
     <p>© 2026 Yan Porfírio - Todos os direitos reservados</p>
   </footer>
 
-  <script>
+  <script src="script.js">
     // Efeito de scroll na navbar
     const navbarContainer = document.querySelector('.navbar-container');
     
